# edgeops-inference-toolkit

./: Cargo.toml
example/: Dockerfile  executor.py  inference_handler.py  manifest.json  requirements.txt
example/models/: gbdt_model.pkl  median_imputer.pkl
src/: constants.rs  main.rs
src/cmd/init/: mod.rs
src/util/: files.rs
template/: Dockerfile  executor.py  inference_handler.py  manifest.json
