[package]
name = "inference-toolkit"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
reqwest = "0.11.15"
tokio = { version = "1.25.0", features = ["full"] }
zip = "0.6.4"
